Fixed x button not showing correctly for mobile in contact and testimonials page

--- a/src/website/NavBar/NavBar.css
+++ b/src/website/NavBar/NavBar.css
@@ -102,7 +102,7 @@
 }
 
 @media only screen and (max-width: 960px) {
-  .fa-solid.fa-xmark {
+  .menu--icon > .fa-solid.fa-xmark {
     font-size: 28px !important;
     color: white !important;
   }
